se corrigio la imagen de talampaya y los link a los whatsapp

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .talampaya{
-  background: url('assets/talampaya.jpg') no-repeat bottom;
+  background: url('assets/talampaya01.jpg') no-repeat bottom;
   background-size: 150%;
   background-attachment: fixed;
   height: 100vh;
