--- a/style.css
+++ b/style.css
@@ -1,38 +1,23 @@
-.container{
-  padding: 0;
-}
 .main{
   background: url('main.jpg') no-repeat center;
   background-size: 150%;
   background-attachment: fixed;
   height: 100vh;
-  margin: 0;
   padding-top: 50vh;
 }
 .padding{
   padding: 2vh;
-}
-.colibri{
-  background: white;
-  background-size: 175%;
-  height: 100vh;
-  margin: 0;
 }
 .novios{
   background: url('colibri.jpg') no-repeat center;
   background-size: 120%;
   background-attachment: fixed;
   height: 75vh;
-  margin: 0;
   padding: 2vh;
 }
-.title{
+.titulo{
   font-family: 'Dancing Script', cursive;
   font-size: 5rem;
-}
-.sub-title{
-  font-family: 'Dancing Script', cursive;
-  font-size: 3rem;
 }
 .quote{
   font-family: 'Dancing Script', cursive;
@@ -62,7 +47,7 @@
 .text-white{
   color: rgb(255, 255, 255);
   font-family: 'Dancing Script', cursive;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
 }
 .text-teal{
   color: teal;
@@ -73,4 +58,7 @@
 .link{
   color: rgb(82, 82, 82);
   text-decoration: unset;
+}
+.card{
+  width: 80vw;
 }
