--- a/style.css
+++ b/style.css
@@ -55,10 +55,10 @@
 .text-blue{
   color: darkblue;
 }
+.text-yellow{
+  color: yellow;
+}
 .link{
   color: rgb(82, 82, 82);
   text-decoration: unset;
-}
-.card{
-  width: 80vw;
 }
