prueba height colibri

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .colibri{
   background: url('colibri.jpg') no-repeat center fixed;
   background-size: 135%;
-  height: 75vh;
+  height: 100%;
   padding-top: 1em;
 }
 .titulo{
